--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Save and Restore</string>
+    <string name="header_text">Entre com seu nome e email para ganhar um código de desconto
+        no seu restaurante favorito!</string>
+    <string name="first_name_label">Nome:</string>
+    <string name="email_label">Email:</string>
+    <string name="last_name_label">Sobrenome:</string>
+    <string name="discount_code_button">PEGAR DESCONTO</string>
+    <string name="discount_code_confirmation">Hei  %s! Aqui está seu código de desconto</string>
+    <string name="add_text_validation">Favor preencher tdos os campos do formulário</string>
 </resources>
